AuthorQuiz implementation with data, tests, event handling and some basic routing set up.

--- a/package.json
+++ b/package.json
@@ -21,5 +21,13 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "prop-types": "^15.6.2",
+    "react-jsonschema-form": "^1.0.6",
+    "react-router-dom": "^4.3.1",
+    "underscore": "^1.9.1"
+  }
 }
